--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,6 +23,7 @@
                         {% if session["user_id"] %}
                         <li class="nav-item"><a class="nav-link" href="/orders">Orders</a></li>
                         <li class="nav-item"><a class="nav-link" href="/history">History</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/cart">Cart</a></li>
                         {% endif %}
                     </ul>
                     {% if session["user_id"] %}
