--- a/templates/menu.html
+++ b/templates/menu.html
@@ -6,13 +6,16 @@
 
 {% block main %}
     {% for index in products %}
-        <div class="load rounded" style="width: 200px; height: 200px; background-image: image('{{ index.image }}'); display: inline-block;">
-            <div class="container">
-                <div class="title text-center">
-                    <h2 class="text-primary">{{index.name}}</h2>
-                    <a href="/products/{{index.shortname}}" class="btn btn-success btn-lg">Order now</a>
-                </div>
-            </div>            
-        </div>
+    <div class="load rounded hovertext position-relative overflow-hidden" style="width: 400px; height: 400px; max-width: 400px; max-height: 400px; background-image: url('{{ index.image }}'); display: inline-block; background-color: lightgray;  background-size: 400px;" onclick="location.href='/products/{{index.shortname}}'" >
+        <div class="container mt-4 overflow-hidden">
+            <div class="title text-center h-500 overflow-hidden">
+                <h2 class="text-primary">{{index.name}}</h2>
+                <a href="/products/{{index.shortname}}" class="btn btn-success btn-lg">Order now</a>
+              <div class="hover d-flex align-items-end h-400 overflow-hidden">
+                <h4 style="height: auto;">{{index.description}}</h4>
+              </div>
+            </div>
+        </div>    
+    </div>
     {% endfor %}
 {% endblock %}
