--- a/templates/product.html
+++ b/templates/product.html
@@ -19,8 +19,8 @@
         {% if session["user_id"] %}
         <form method="post" class="mt-3">
           <div class="mb-3">
-            <label for="quantity" class="form-label">Quantity:</label>
-            <input type="number" min="1" max="24" onchange="enforceMinMax(this)" class="form-control" name="quantity" required>
+            <label for="quanity" class="form-label">Quantity:</label>
+            <input type="number" min="1" max="24" onchange="enforceMinMax(this)" class="form-control" name="quanity" required>
           </div>
       
           <div class="mb-3">
@@ -29,7 +29,7 @@
           </div>
       
           <input hidden type="text" value="{{ product.name }}" name="product">
-      
+          <input hidden type="text" value="{{product.price}}" name="price">
           <button class="btn btn-primary" type="submit" name="submit">Add to Cart</button>
         </form>
       {% else %}
@@ -41,7 +41,7 @@
   </div>
 </div>
 <script>
-  const enforceMinMax = (el) => {
+  function enforceMinMax (el)  {
     if (el.value != "") {
         
         if (parseInt(el.value) < parseInt(el.min)) {
