--- a/templates/product.html
+++ b/templates/product.html
@@ -9,7 +9,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-6">
-      <img src="{{product.image}}" alt="Product Image" class="img-fluid" draggable="false">
+      <img src="{{product.image}}" alt="Product Image" class="img-fluid" draggable="false" width="800px" height="800px">
     </div>
     <div class="col-md-6">
       <div class="product-info">
@@ -35,7 +35,6 @@
       {% else %}
         <h2 class="mt-3">You must be logged in to order!</h2>
       {% endif %}
-      
       </div>
     </div>
   </div>
