--- a/templates/product.html
+++ b/templates/product.html
@@ -15,7 +15,7 @@
       <div class="product-info">
         <h4>{{product.name}}</h4>
         <p>{{product.description}}</p>
-        <p>Price: {{product.price}}</p>
+        <p>Price: {{product.price | usd}}</p>
         {% if session["user_id"] %}
         <form method="post" class="mt-3">
           <div class="mb-3">
