--- a/templates/register.html
+++ b/templates/register.html
@@ -7,7 +7,16 @@
 {% block main %}
 <form action="/register" method="post">
     <div class="mb-3">
-        <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="Username" type="text">
+        <input class="form-control mx-auto w-auto" autocomplete="off" name="firstname" placeholder="First name" type="text" autofocus>
+    </div>
+    <div class="mb-3">
+        <input class="form-control mx-auto w-auto" autocomplete="off" name="lastname" placeholder="Last name" type="text">
+    </div>
+    <div class="mb-3">
+        <input class="form-control mx-auto w-auto" autocomplete="off" name="email" placeholder="Email Address" type="text">
+    </div>
+    <div class="mb-3">
+        <input autocomplete="off" class="form-control mx-auto w-auto" id="username" name="username" placeholder="Username" type="text">
     </div>
     <div class="mb-3">
         <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="Password" type="password">
