--- a/templates/login.html
+++ b/templates/login.html
@@ -14,4 +14,5 @@
         </div>
         <button class="btn btn-primary" type="submit">Log In</button>
     </form>
+    <a href="/password_reset" class="text-muted">Forgot password?</a>
 {% endblock %}
