--- a/templates/cart.html
+++ b/templates/cart.html
@@ -30,7 +30,7 @@ Home Page
             <th>
                 <form method="post" title="Remove from cart" action="/removefromcart">
                     <input type="hidden" name="product" value="{{ product }}">
-                    <input type="hidden" name="productid" value="{{ product.product }}">
+                    <input type="hidden" name="productid" value="{{ product.id }}">
                     <button type="submit" class="btn btn-danger pt-1 pl-3 pr-3">
                         <span style="font-size: 1em;">&times;</span>
                     </button>
