--- a/templates/verify_new_pwd.html
+++ b/templates/verify_new_pwd.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Verify Email Address
+    Verify New Password
 {% endblock %}
 
 {% block main %}
