--- a/templates/orders.html
+++ b/templates/orders.html
@@ -17,6 +17,11 @@ Home Page
               <th> <a href="/orders/{{product.orderid}}">{{product.orderid}}<a></a></th>
               <th> {{product.date}}</th>
               <th>{{completed}}</th>
+              <th> 
+                <form method="post">
+                  <button type="submit" class="btn" title="Adds order into cart">Add to cart</button>
+                </form>
+              </th>
             </tr>
           {% endfor %}
         </tbody>
