--- a/static/style.css
+++ b/static/style.css
@@ -60,3 +60,12 @@
   font-size: 16px;
   color: #555;
 }
+.right-side-orders-admin {
+  margin: 0;
+  padding: 0;
+  left: 0;
+  top:0;
+  width: 50%;
+  height: calc(100vh - 150px);
+  background-color: grey;
+}
